ClaimantRep Notification changes