@@ -9,6 +9,7 @@ import uk.gov.hmcts.et.common.model.bulk.types.DynamicValueType;
 import uk.gov.hmcts.et.common.model.ccd.CaseData;
 import uk.gov.hmcts.et.common.model.ccd.types.SendNotificationType;
 import uk.gov.hmcts.et.common.model.ccd.types.SendNotificationTypeItem;
+import uk.gov.hmcts.ethos.replacement.docmosis.utils.IntWrapper;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -19,7 +20,8 @@ import static uk.gov.hmcts.ecm.common.model.helper.Constants.CLAIMANT_TITLE;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.RESPONDENT_ONLY;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.RESPONDENT_TITLE;
 import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.PseHelper.formatOrdReqDetails;
-import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.PseHelper.formatRespondDetails;
+import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.PseHelper.formatResponseDetails;
+import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.PseHelper.formatTribunalResponse;
 import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.PseHelper.getPartyNotifications;
 import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.PseHelper.getSelectedNotificationWithCode;
 
@@ -46,48 +48,64 @@ public class ProvideSomethingElseViewService {
             return null;
         }
 
+        IntWrapper count = new IntWrapper(0);
         return DynamicFixedListType.from(caseData.getSendNotificationCollection().stream()
-            .filter(notification -> getPartyNotifications(notification, party))
-            .map(r ->
-                DynamicValueType.create(
-                    r.getValue().getNumber(),
-                    r.getValue().getNumber() + " - " + r.getValue().getSendNotificationTitle()
-                )
-            )
-            .toList());
+                .filter(notification -> getPartyNotifications(notification, party))
+                .map(notification -> DynamicValueType.create(
+                        notification.getValue().getNumber(),
+                        count.incrementAndReturnValue() + " - " + notification.getValue().getSendNotificationTitle()))
+                .collect(Collectors.toList()));
+
     }
 
     public String generateViewNotificationsMarkdown(CaseData caseData, String partySelection) {
-        String filter = switch (partySelection) {
-            case RESPONDENT_TITLE -> CLAIMANT_ONLY;
-            case CLAIMANT_TITLE -> RESPONDENT_ONLY;
-            default -> throw new IllegalArgumentException("Invalid party selection");
-        };
         List<SendNotificationTypeItem> notifications = caseData.getSendNotificationCollection();
         if (CollectionUtils.isEmpty(notifications)) {
             return String.format(TABLE_COLUMNS_MARKDOWN, "");
         }
 
-        String tableRows = notifications.stream()
-                .filter(o -> !filter.equals(o.getValue().getSendNotificationNotify()))
-                .map(this::viewNotificationsFormatRow)
-                .collect(Collectors.joining());
+        String filter = switch (partySelection) {
+            case RESPONDENT_TITLE -> CLAIMANT_ONLY;
+            case CLAIMANT_TITLE -> RESPONDENT_ONLY;
+            default -> throw new IllegalArgumentException("Invalid party selection");
+        };
+
+        StringBuilder sb = new StringBuilder();
+        IntWrapper count = new IntWrapper(0);
+        for (SendNotificationTypeItem o : notifications) {
+            if (!filter.equals(o.getValue().getSendNotificationNotify())) {
+                String formatRow = viewNotificationsFormatRow(o, count);
+                sb.append(formatRow);
+            }
+        }
+        String tableRows = sb.toString();
 
         return String.format(TABLE_COLUMNS_MARKDOWN, tableRows);
     }
 
-    private String viewNotificationsFormatRow(SendNotificationTypeItem sendNotificationTypeItem) {
+    private String viewNotificationsFormatRow(SendNotificationTypeItem sendNotificationTypeItem, IntWrapper count) {
         SendNotificationType notification = sendNotificationTypeItem.getValue();
 
         return String.format(TABLE_ROW_MARKDOWN,
-                notification.getNumber(),
+                count.incrementAndReturnValue(),
                 String.join(", ", notification.getSendNotificationSubject()),
                 notification.getSendNotificationNotify(),
                 notification.getDate(),
                 notification.getSendNotificationTitle(),
                 defaultIfEmpty(notification.getSendNotificationResponseTribunal(), "No"),
-                "0"
+                getResponseSize(notification)
         );
+    }
+
+    private Object getResponseSize(SendNotificationType notification) {
+        int numberOfResponses = 0;
+        if (CollectionUtils.isNotEmpty(notification.getRespondCollection())) {
+            numberOfResponses += notification.getRespondCollection().size();
+        }
+        if (CollectionUtils.isNotEmpty(notification.getRespondNotificationTypeCollection())) {
+            numberOfResponses += notification.getRespondNotificationTypeCollection().size();
+        }
+        return String.valueOf(numberOfResponses);
     }
 
     /**
@@ -119,7 +137,8 @@ public class ProvideSomethingElseViewService {
         }
         SendNotificationType sendNotificationType = sendNotificationTypeItem.getValue();
         return formatOrdReqDetails(sendNotificationType)
-            + formatRespondDetails(sendNotificationType);
+            + formatResponseDetails(sendNotificationType, party)
+            + formatTribunalResponse(sendNotificationType, party);
     }
 
 }
